--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,8 +36,205 @@
         </div>
     </nav>
     <section id="profile">
-        <div class="section pic-container">
-            <img src="./assets/photo_2023-11-28_19-48-05.jpg" width="500px"  alt="Volodymyr Medvedchuk profie picture">
+        <div class="section__pic-container">
+            <img src="./assets/photo_.jpg" width="500px"  alt="Volodymyr Medvedchuk profie picture">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Volodymyr Medvedchuk</h1>
+            <p class="section__text__p2">Frontend Developer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/full_stack.pdf')">Download SV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact info</button>
+            </div>
+        <div id="socials-container">
+            <img 
+            src="./assets/linkedin.png" alt="My linkedin profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/feed/'"
+            />
+            <img 
+            src="./assets/github.png" alt="My linkedin profile"
+            class="icon"
+            onclick="location.href='https://github.com/vladmeeedy/hello-world'"
+            />
+        </div>
+
+        </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/hunter.jpg" 
+                alt="Profie picture" 
+                class="about-pic"
+                />
+            </div>
+        <div class="about-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <img src="./assets/experience1.png" 
+                    alt="Experiance icon" 
+                    class="icon"
+                    />
+                    <h3>Experience</h3>
+                    <p>1+year <br/>Frontend Developer</p>
+                </div>
+                <div class="details-container">
+                    <img src="./assets/education.png" 
+                    alt="Education icon" 
+                    class="icon"
+                    />
+                    <h3>Education</h3>
+                    <p>DunIt education<br/>Frontend Developer</p>
+                </div>
+            </div>
+            <div class="text-container">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aliquid illum quibusdam. Quasi, quidem eligendi tenetur odio, fugiat rerum cupiditate blanditiis expedita perferendis sapiente dolores, consequuntur nesciunt ad aut facilis.</p>
+            </div>
+        </div>
+        </div>
+        <img src="./assets/arrow.png" 
+        alt="Arrow icon" 
+        class="icon arrow" 
+        onclick="location.href='./#experience'"
+        />
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-containers">
+                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>SASS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>TypeScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Material UI</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-containers">
+                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>PostgreSQL</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Node js</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Express js</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Git</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />                            
+                        </article>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>    
     <script src="script.js"></script>    
