--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#experiance">Experiance</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -88,7 +88,7 @@
                     class="icon"
                     />
                     <h3>Education</h3>
-                    <p>DunIt education<br/>Frontend Developer</p>
+                    <p>DUN.IT education<br/>Frontend Developer</p>
                 </div>
             </div>
             <div class="text-container">
@@ -107,7 +107,7 @@
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-                <div class="details-containers">
+                <div class="details-container">
                     <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
                         <article>
@@ -178,7 +178,7 @@
                         </article>
                     </div>
                 </div>
-                <div class="details-containers">
+                <div class="details-container">
                     <h2 class="experience-sub-title">Frontend Development</h2>
                     <div class="article-container">
                         <article>
@@ -224,15 +224,36 @@
                                 <h3>Git</h3>
                                 <p>Intermediate</p>
                             </div>
-                        </article>
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png" 
-                            alt="Experience icon" 
-                            class="icon"
-                            />                            
-                        </article>
+                        </article>                       
                     </div>
+                </div>
+            </div>
+        </div>
+        <img 
+        src="./assets/arrow.png" 
+        alt="Arow icon" 
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+        />
+    </section>
+    <section id="projects">
+        <p class="section__text__p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img 
+                    src="./assets/project-1.jpg" 
+                    alt="Project 1" 
+                    class="project-img"
+                    />
+                </div>
+                <h2 class="experience-sub-title project-title">Project One</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" 
+                    onclick="location.href=''">
+                        Github
+                    </button>
                 </div>
             </div>
         </div>
