--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -240,24 +240,101 @@
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
+            <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
                     src="./assets/project-1.jpg" 
                     alt="Project 1" 
-                    class="project-img"
+                    class="project-img"                    
                     />
                 </div>
                 <h2 class="experience-sub-title project-title">Project One</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" 
-                    onclick="location.href=''">
+                    onclick="location.href='https://github.com/vladmeeedy/hello-world/tree/main/Store-Avion-main'">
                         Github
+                    </button>
+                    <button class="btn btn-color-2 project-btn" 
+                    onclick="location.href='https://shop-avion.onrender.com/home/'">
+                        Live Demo
                     </button>
                 </div>
             </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img 
+                    src="./assets/project-1.jpg" 
+                    alt="Project 1" 
+                    class="project-img"                    
+                    />
+                </div>
+                <h2 class="experience-sub-title project-title">Project Two</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" 
+                    onclick="location.href='https://github.com/vladmeeedy/hello-world/tree/main/Store-Avion-main'">
+                        Github
+                    </button>
+                    <button class="btn btn-color-2 project-btn" 
+                    onclick="location.href='https://shop-avion.onrender.com/home/'">
+                        Live Demo
+                    </button>
+                </div>
+            </div>
+            </div>
         </div>
-    </section>    
+        <img 
+        src="./assets/arrow.png" 
+        alt="Arow icon" 
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+        />
+    </section>
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img 
+                src="./assets/email.png" 
+                alt="Email icon" 
+                class="icon contact-icon"
+                />
+                <p>
+                    <a  target="_blank"
+                        href="mailto:vladmeeedy@gmail.com">
+                        vladmeeedy@gmail.com
+                    </a>
+                </p>
+            </div>
+            <div class="contact-info-container">
+                <img 
+                src="./assets/linkedin.png" 
+                alt="linkedIn icon" 
+                class="icon contact-icon"
+                />
+                <p>
+                    <a  target="_blank"
+                        href="https://www.linkedin.com/in/%D0%B2%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80-%D0%BC%D0%B5%D0%B4%D0%B2%D0%B5%D0%B4%D1%87%D1%83%D0%BA-7239462a1/?locale=en_US">
+                        linkedIn
+                    </a>
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; Volodymyr Medvedchuk. All Rights Reserved</p>
+    </footer>    
     <script src="script.js"></script>    
 </body>
 </html>
