--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/photo_.jpg" width="500px"  alt="Volodymyr Medvedchuk profie picture">
+            <img src="./assets/IMG_4873.png" alt="Volodymyr Medvedchuk profie picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -67,7 +67,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/hunter.jpg" 
+                <img src="./assets/foto2.jpg" 
                 alt="Profie picture" 
                 class="about-pic"
                 />
