--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,14 +44,14 @@
             <h1 class="title">Volodymyr Medvedchuk</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/full_stack.pdf')">Download SV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/VolodymyrMedvedchuk-CV-FrontEndDeveloper.pdf')">Download SV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact info</button>
             </div>
         <div id="socials-container">
             <img 
             src="./assets/linkedin.png" alt="My linkedin profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/feed/'"
+            onclick="location.href='linkedin.com/in/владимир-медведчук-7239462a1'"
             />
             <img 
             src="./assets/github.png" alt="My linkedin profile"
@@ -88,11 +88,11 @@
                     class="icon"
                     />
                     <h3>Education</h3>
-                    <p>DUN.IT education<br/>Frontend Developer</p>
+                    <p>DUN.IT education<br/>Frontend Developer<br/><a target="_blank" href="./assets/certificate.html">Certificate</a></p>
                 </div>
             </div>
             <div class="text-container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aliquid illum quibusdam. Quasi, quidem eligendi tenetur odio, fugiat rerum cupiditate blanditiis expedita perferendis sapiente dolores, consequuntur nesciunt ad aut facilis.</p>
+                <p>I am looking for a job offer for the position of a Junior front-end developer in a company that will give me the opportunity to implement the acquired development skills and start a career in the IT industry. I can be useful in the development of functional applications, writing functional components, other issues in development. Interested in learning and expanding the acquired programming skills.</p>
             </div>
         </div>
         </div>
@@ -117,8 +117,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>HTML</h3>
-                                <p>Experienced</p>
+                                <h3>React</h3>
                             </div>
                         </article>
                         <article>
@@ -128,8 +127,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>CSS</h3>
-                                <p>Experienced</p>
+                                <h3>Redux</h3>
                             </div>
                         </article>
                         <article>
@@ -139,8 +137,27 @@
                             class="icon"
                             />
                             <div>
-                                <h3>SASS</h3>
-                                <p>Intermediate</p>
+                                <h3>React router</h3>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Testing react components</h3>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Git / GitHub / GitLab</h3>
                             </div>
                         </article>
                         <article>
@@ -151,7 +168,6 @@
                             />
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Basic</p>
                             </div>
                         </article>
                         <article>
@@ -161,8 +177,17 @@
                             class="icon"
                             />
                             <div>
-                                <h3>TypeScript</h3>
-                                <p>Basic</p>
+                                <h3>HTML / CSS / SCSS</h3>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Bootstrap</h3>
                             </div>
                         </article>
                         <article>
@@ -173,13 +198,12 @@
                             />
                             <div>
                                 <h3>Material UI</h3>
-                                <p>Intermediate</p>
                             </div>
                         </article>
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Frontend Development</h2>
+                    <h2 class="experience-sub-title">Backend Development</h2>
                     <div class="article-container">
                         <article>
                             <img 
@@ -188,8 +212,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>PostgreSQL</h3>
-                                <p>Basic</p>
+                                <h3>Node.js</h3>
                             </div>
                         </article>
                         <article>
@@ -199,8 +222,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>Node js</h3>
-                                <p>Intermediate</p>
+                                <h3>Express.js</h3>
                             </div>
                         </article>
                         <article>
@@ -210,8 +232,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>Express js</h3>
-                                <p>Intermediate</p>
+                                <h3>Webpack / Gulp</h3>
                             </div>
                         </article>
                         <article>
@@ -221,8 +242,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>Git</h3>
-                                <p>Intermediate</p>
+                                <h3>MongoDB</h3>
                             </div>
                         </article>                       
                     </div>
@@ -241,46 +261,26 @@
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img 
-                    src="./assets/project-1.jpg" 
-                    alt="Project 1" 
-                    class="project-img"                    
-                    />
-                </div>
-                <h2 class="experience-sub-title project-title">Project One</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/vladmeeedy/hello-world/tree/main/Store-Avion-main'">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/project-1.jpg" 
+                        alt="Project 1" 
+                        class="project-img"                    
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="location.href='https://github.com/vladmeeedy/hello-world/tree/main/Store-Avion-main'">
                         Github
-                    </button>
-                    <button class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://shop-avion.onrender.com/home/'">
+                        </button>
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="location.href='https://shop-avion.onrender.com/home/'">
                         Live Demo
-                    </button>
+                        </button>
+                    </div>
                 </div>
-            </div>
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img 
-                    src="./assets/project-1.jpg" 
-                    alt="Project 1" 
-                    class="project-img"                    
-                    />
-                </div>
-                <h2 class="experience-sub-title project-title">Project Two</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/vladmeeedy/hello-world/tree/main/Store-Avion-main'">
-                        Github
-                    </button>
-                    <button class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://shop-avion.onrender.com/home/'">
-                        Live Demo
-                    </button>
-                </div>
-            </div>
             </div>
         </div>
         <img 
@@ -294,6 +294,29 @@
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img 
+                src="./assets/phone.png" 
+                alt="Phone icon" 
+                class="icon contact-icon"
+                />
+                <p>
+                   +380980424818
+                </p>
+            </div>
+            <div class="contact-info-container">
+                <img 
+                src="./assets/tg.png" 
+                alt="Telegram icon" 
+                class="icon contact-icon"
+                />
+                <p>
+                    <a  target="_blank"
+                        href="https://t.me/vladme777">
+                        https://t.me/
+                    </a>
+                </p>
+            </div>
             <div class="contact-info-container">
                 <img 
                 src="./assets/email.png" 
@@ -315,7 +338,7 @@
                 />
                 <p>
                     <a  target="_blank"
-                        href="https://www.linkedin.com/in/%D0%B2%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80-%D0%BC%D0%B5%D0%B4%D0%B2%D0%B5%D0%B4%D1%87%D1%83%D0%BA-7239462a1/?locale=en_US">
+                        href="linkedin.com/in/владимир-медведчук-7239462a1">
                         linkedIn
                     </a>
                 </p>
