--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -301,7 +301,7 @@
                 class="icon contact-icon"
                 />
                 <p>
-                   +380980424818
+                    <a href="tel:+380980424818">+380980424818</a>
                 </p>
             </div>
             <div class="contact-info-container">
@@ -313,7 +313,7 @@
                 <p>
                     <a  target="_blank"
                         href="https://t.me/vladme777">
-                        https://t.me/
+                        https://t.me
                     </a>
                 </p>
             </div>
