add changes to portfolio

--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">Про себе</a></li>
-                <li><a href="#experiance" onclick="toggleMenu()">Досвід</a></li>
+                <li><a href="#experience" onclick="toggleMenu()">Досвід</a></li>
                 <li><a href="#projects" onclick="toggleMenu()">Проекти</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Контакти</a></li>
             </div>
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/IMG_4873.png" alt="Volodymyr Medvedchuk profie picture">
+            <img src="./assets/photo.webp" alt="Volodymyr Medvedchuk profie picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Привіт, я</p>
@@ -51,7 +51,7 @@
             <img 
             src="./assets/linkedin.png" alt="My linkedin profile"
             class="icon"
-            onclick="location.href='linkedin.com/in/владимир-медведчук-7239462a1'"
+            onclick="location.href='https://www.linkedin.com/in/владимир-медведчук-7239462a1'"
             />
             <img 
             src="./assets/github.png" alt="My linkedin profile"
@@ -338,7 +338,7 @@
                 />
                 <p>
                     <a  target="_blank"
-                        href="linkedin.com/in/владимир-медведчук-7239462a1">
+                        href="https://www.linkedin.com/in/владимир-медведчук-7239462a1">
                         linkedIn
                     </a>
                 </p>
