--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                <li><a href="#experiance" onclick="toggleMenu()">Experiance</a></li>
+                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
                 <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </div>
@@ -37,21 +37,21 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/IMG_4873.png" alt="Volodymyr Medvedchuk profie picture">
+            <img src="./assets/photo.webp" alt="Volodymyr Medvedchuk profie picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Volodymyr Medvedchuk</h1>
             <p class="section__text__p2">Frontend Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/VolodymyrMedvedchuk-CV-FrontEndDeveloper.pdf')">Download SV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/VolodymyrMedvedchuk-CV-FrontEndDeveloper.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact info</button>
             </div>
         <div id="socials-container">
             <img 
             src="./assets/linkedin.png" alt="My linkedin profile"
             class="icon"
-            onclick="location.href='linkedin.com/in/владимир-медведчук-7239462a1'"
+            onclick="location.href='https://www.linkedin.com/in/владимир-медведчук-7239462a1'"
             />
             <img 
             src="./assets/github.png" alt="My linkedin profile"
@@ -338,7 +338,7 @@
                 />
                 <p>
                     <a  target="_blank"
-                        href="linkedin.com/in/владимир-медведчук-7239462a1">
+                        href="https://www.linkedin.com/in/владимир-медведчук-7239462a1">
                         linkedIn
                     </a>
                 </p>
