--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -51,12 +51,12 @@
             <img 
             src="./assets/linkedin.png" alt="My linkedin profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/владимир-медведчук-7239462a1'"
+            onclick="window.open('https://www.linkedin.com/in/владимир-медведчук-7239462a1')"
             />
             <img 
             src="./assets/github.png" alt="My linkedin profile"
             class="icon"
-            onclick="location.href='https://github.com/vladmeeedy/hello-world'"
+            onclick="window.open('https://github.com/vladmeeedy')"
             />
         </div>
 
@@ -127,7 +127,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>Redux</h3>
+                                <h3>Redux toolkit</h3>
                             </div>
                         </article>
                         <article>
@@ -140,6 +140,26 @@
                                 <h3>React router</h3>
                             </div>
                         </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>React hooks</h3>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>Axios + Fetsh</h3>
+                            </div>
+                        </article>                        
                         <article>
                             <img 
                             src="./assets/checkmark.png" 
@@ -170,6 +190,26 @@
                                 <h3>JavaScript</h3>
                             </div>
                         </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>TypeScript</h3>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                            src="./assets/checkmark.png" 
+                            alt="Experience icon" 
+                            class="icon"
+                            />
+                            <div>
+                                <h3>CodeSplitting</h3>
+                            </div>
+                        </article>                        
                         <article>
                             <img 
                             src="./assets/checkmark.png" 
@@ -272,11 +312,33 @@
                     <h2 class="experience-sub-title project-title">Проeкт перший</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="location.href='https://github.com/DoroshenkoDan/Store-Avion'">
+                        onclick="window.open('https://github.com/DoroshenkoDan/Store-Avion')">
                         Github
                         </button>
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="location.href='https://shop-avion.onrender.com/home/'">
+                        onclick="window.open('https://shop-avion.onrender.com/home/')">
+                        демо
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/project-2.jpg" 
+                        alt="Project 1" 
+                        class="project-img"                    
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Проeкт другий</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://github.com/vladmeeedy/react-pizza-v2.git')">
+                        Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://6601a388846d9b0e47a70fca--remarkable-peony-54e1cb.netlify.app/')">
                         демо
                         </button>
                     </div>
