--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -88,7 +88,7 @@
                     class="icon"
                     />
                     <h3>Освіта</h3>
-                    <p>DUN.IT education<br/>Frontend розробник<br/><a target="_blank" href="./assets/certificate.html">Сертифікат</a></p>
+                    <p>DAN.IT education<br/>Frontend розробник<br/><a target="_blank" href="./assets/certificate.html">Сертифікат</a></p>
                 </div>
             </div>
             <div class="text-container">
@@ -129,36 +129,6 @@
                             <div>
                                 <h3>Redux toolkit</h3>
                             </div>
-                        </article>
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png" 
-                            alt="Experience icon" 
-                            class="icon"
-                            />
-                            <div>
-                                <h3>React router</h3>
-                            </div>
-                        </article>
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png" 
-                            alt="Experience icon" 
-                            class="icon"
-                            />
-                            <div>
-                                <h3>React hooks</h3>
-                            </div>
-                        </article>
-                        <article>
-                            <img 
-                            src="./assets/checkmark.png" 
-                            alt="Experience icon" 
-                            class="icon"
-                            />
-                            <div>
-                                <h3>Axios + Fetsh</h3>
-                            </div>
                         </article>                        
                         <article>
                             <img 
@@ -167,7 +137,7 @@
                             class="icon"
                             />
                             <div>
-                                <h3>Testing react components</h3>
+                                <h3>Axios + Fetsh</h3>
                             </div>
                         </article>
                         <article>
@@ -309,7 +279,7 @@
                         class="project-img"                    
                         />
                     </div>
-                    <h2 class="experience-sub-title project-title">Проeкт перший</h2>
+                    <h2 class="experience-sub-title project-title">Проeкт "Інтернет-магазин"</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
                         onclick="window.open('https://github.com/DoroshenkoDan/Store-Avion')">
@@ -329,7 +299,7 @@
                         class="project-img"                    
                         />
                     </div>
-                    <h2 class="experience-sub-title project-title">Проeкт другий</h2>
+                    <h2 class="experience-sub-title project-title">Проeкт "Інтернет-магазин"</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
                         onclick="window.open('https://github.com/vladmeeedy/react-pizza-v2.git')">
@@ -373,7 +343,7 @@
                 <p>
                     <a  target="_blank"
                         href="https://t.me/vladme777">
-                        https://t.me
+                        telegram
                     </a>
                 </p>
             </div>
